<resources>
    <string name="app_name">Vyapaar</string>
    <string name="registration_header">Register a new membership</string>
    <string name="name_hint">Full name</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="password_hint">Password</string>
    <string name="re_password_hint">Retype Password</string>
    <string name="location_hint">Location</string>
    <string name="dob_hint">DOB:</string>
    <string name="time_hint">Time of birth</string>
    <string name="string_terms">I agree to the terms</string>
    <string name="membership_text">I already have a membership</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_header">Sign in to start your session</string>
    <string name="login_text">Login</string>
    <string name="remember_me_text">Remember me</string>
    <string name="forgot_pass">I forgot my password</string>
    <string name="new_membership">Register a new membership</string>
    <string name="enter_otp">Enter the code that was sent to %s</string>
    <string name="verify_otp">Verify</string>
    <string name="otp_verification">Verification Code</string>
    <string name="title_activity_new_dashboard">NewDashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
