<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.vyapaar.ui.main.AdminLoginViewModel" />

        <variable
            name="callback"
            type="com.example.vyapaar.ui.contract.LoginContract" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/parent_margin"
        tools:context=".ui.main.AdminLoginFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login_header" />

        <com.example.vyapaar.ui.views.CustomEditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/registration_top_margin"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/email_hint"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_header" />

        <com.example.vyapaar.ui.views.CustomEditText
            android:id="@+id/editext_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/registration_top_margin"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/ic_lock"
            android:hint="@string/password_hint"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_email" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/registration_top_margin"
            android:text="@string/remember_me_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editext_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/registration_top_margin"
            android:background="@color/colorSubmitBtn"
            android:text="@string/login_text"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox_terms" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/registration_top_margin"
            android:text="@string/forgot_pass"
            android:textColor="@color/colorLink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_submit" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/registration_top_margin"
            android:text="@string/new_membership"
            android:onClick="@{() -> callback.launchRegistrationFragment()}"
            android:textColor="@color/colorLink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_forgot_pass" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>