<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.vyapaar.ui.main.AdminRegistrationViewModel" />
        <variable
            name="callback"
            type="com.example.vyapaar.ui.contract.RegistrationContract" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_margin="@dimen/parent_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.AdminRegistrationFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/registration_header"/>


        <com.example.vyapaar.ui.views.CustomEditText
            android:id="@+id/edittext_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="8dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/name_hint"
            android:text="@={viewModel.name}"
            android:drawableEnd="@drawable/ic_icon_person"
            app:layout_constraintTop_toBottomOf="@id/text_header"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/registration_top_margin"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.example.vyapaar.ui.views.CustomEditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="8dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/email_hint"
            android:text="@={viewModel.email}"
            android:drawableEnd="@drawable/ic_email"
            app:layout_constraintTop_toBottomOf="@id/edittext_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/registration_top_margin"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.example.vyapaar.ui.views.CustomEditText
            android:id="@+id/edittext_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="8dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/phone_hint"
            android:inputType="number"
            android:text="@={viewModel.phNo}"
            android:drawableEnd="@drawable/ic_phone"
            app:layout_constraintTop_toBottomOf="@id/edittext_email"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/registration_top_margin"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.example.vyapaar.ui.views.CustomEditText
            android:id="@+id/editext_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="8dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            android:drawableEnd="@drawable/ic_lock"
            app:layout_constraintTop_toBottomOf="@id/edittext_phone"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/registration_top_margin"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.example.vyapaar.ui.views.CustomEditText
            android:id="@+id/editext_reenter_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="8dp"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"
            android:hint="@string/re_password_hint"
            android:drawableEnd="@drawable/ic_lock"
            app:layout_constraintTop_toBottomOf="@id/editext_password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/registration_top_margin"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.example.vyapaar.ui.views.CustomEditText
            android:id="@+id/edittext_datepicker"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="8dp"
            android:focusable="false"
            android:background="@drawable/edittext_background"
            android:hint="@string/dob_hint"
            android:text="@={viewModel.date}"
            android:drawableEnd="@drawable/ic_calendar"
            android:clickable="true"
            android:onClick="@{() -> callback.openDatePicker()}"
            app:layout_constraintTop_toBottomOf="@id/editext_reenter_password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/registration_top_margin"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edittext_datepicker"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/string_terms"
            android:layout_marginTop="@dimen/registration_top_margin"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="@color/colorSubmitBtn"
            android:textColor="#ffffff"
            android:onClick="@{() -> viewModel.submitRegistration()}"
            app:layout_constraintTop_toBottomOf="@id/checkbox_terms"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/registration_top_margin"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/membership_text"
            android:textColor="@color/colorLink"
            android:onClick="@{() -> callback.launchLoginFragment()}"
            app:layout_constraintTop_toBottomOf="@id/btn_submit"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/registration_top_margin"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>